# Kholors

./: .gitignore  .gitlab-ci.yml  .releaserc.yml  CMakeLists.txt  Dockerfile  README.md  sonar-project.properties
design/: ux.sketch
src/: ArrangementArea.cpp  ArrangementArea.h  ColorPalette.h  Config.cpp  Config.h  DefaultConfigPath.cpp  DefaultConfigPath.h  FileError.h  GridLevel.h  Main.cpp  MainComponent.cpp  MainComponent.h  Notification.h  NotificationArea.cpp  NotificationArea.h  ReferenceCountedBuffer.h  SampleManager.cpp  SampleManager.h  SamplePlayer.cpp  SamplePlayer.h  WaitGroup.cpp  WaitGroup.h  version.cpp
src/Arrangement/: Action.h  ActivityManager.cpp  ActivityManager.h  AppState.cpp  AppState.h  ColorPalette.h  GitWrapper.cpp  GitWrapper.h  Marshalable.h  NumericInputId.cpp  NumericInputId.h  SampleAreaRectangle.h  SampleState.h  Task.cpp  Task.h  TaskListener.h  TaxonomyManager.cpp  TaxonomyManager.h  TimeQuantization.cpp  TimeQuantization.h  UserInterfaceState.h
src/Audio/: AudioFilesBufferStore.cpp  AudioFilesBufferStore.h  DataSource.h  FftRunner.cpp  FftRunner.h  MixbusDataSource.cpp  MixbusDataSource.h  MixingBus.cpp  MixingBus.h  ReferenceCountedBuffer.h  SampleManager.cpp  SampleManager.h  SamplePlayer.cpp  SamplePlayer.h  UnitConverter.cpp  UnitConverter.h
src/OpenGL/: AlphaMaskTextureLoader.h  BackgroundModel.cpp  BackgroundModel.h  FreqviewShaders.h  GLInfoLogger.h  GraphicModel.h  RectangleModel.cpp  RectangleModel.h  SampleGraphicModel.cpp  SampleGraphicModel.h  TextureManager.cpp  TextureManager.h  TexturedModel.cpp  TexturedModel.h  Vertex.h
src/UserInterface/: ActionTabs.cpp  ActionTabs.h  ArrangementArea.cpp  ArrangementArea.h  AudioLibTreeItem.cpp  AudioLibTreeItem.h  AudioLibraryTab.cpp  AudioLibraryTab.h  ColouredTreeView.h  CustomFonts.cpp  CustomFonts.h  EmptyTab.cpp  EmptyTab.h  FontsLoader.cpp  FontsLoader.h  FragmentMonoFont.cpp  FragmentMonoFont.h  GridLevel.h  Icons.cpp  Icons.h  IconsLoader.cpp  IconsLoader.h  KholorsLookAndFeel.cpp  KholorsLookAndFeel.h  LayerBar.cpp  LayerBar.h  LibrarySearchBar.h  LogoDarkPng.cpp  LogoDarkPng.h  MainComponent.cpp  MainComponent.h  MenuBar.cpp  MenuBar.h  NotificationArea.cpp  NotificationArea.h  NotificationOverlay.cpp  NotificationOverlay.h  ResultList.h  RobotoFont.h  Section.cpp  (+7 more)
src/UserInterface/ArrangementArea/: ArrangementArea.cpp  ArrangementArea.h  FrequencyGrid.cpp  FrequencyGrid.h  TempoGrid.cpp  TempoGrid.h
src/UserInterface/Dialogs/: ConfirmDialog.cpp  ConfirmDialog.h  ConfirmResetDialog.h  GitCommitDialog.cpp  GitCommitDialog.h  GitInitRepoDialog.cpp  GitInitRepoDialog.h  LineEntryDialog.cpp  LineEntryDialog.h  NumericInputSetDialog.h  OpenProjectDialog.cpp  OpenProjectDialog.h
src/UserInterface/Sidebar/: ColorPicker.cpp  ColorPicker.h  LoopButton.cpp  LoopButton.h  PlayButton.cpp  SampleInputs.cpp  SampleInputs.h  SampleProperties.cpp  SampleProperties.h  SidebarArea.cpp  SidebarArea.h  StopButton.cpp  TrackProperties.cpp  TrackProperties.h
src/UserInterface/TabSection/: AudioLibTreeItem.cpp  AudioLibTreeItem.h  AudioLibraryTab.cpp  AudioLibraryTab.h  EmptyTab.h  GeneratorsTab.cpp  GeneratorsTab.h  LibrarySearchBar.h  ResultList.h
src/UserInterface/Topbar/: ColorPicker.cpp  ColorPicker.h  LoopButton.cpp  MenuBar.cpp  MenuBar.h  NotificationArea.cpp  NotificationArea.h  PlayButton.cpp  PlayButton.h  SampleInputs.cpp  SampleInputs.h  SampleProperties.cpp  SampleProperties.h  StopButton.h  TopbarArea.cpp  TopbarArea.h  TopbarLeftArea.cpp  TopbarLeftArea.h  TopbarRightArea.cpp  TopbarRightArea.h  TrackProperties.cpp  TrackProperties.h
src/UserInterface/Widgets/: CallbackViewport.h  LabeledLineContainer.cpp  LabeledLineContainer.h  NumericInput.cpp  NumericInput.h  PassClickTab.h  ResizableTabsContainer.h  Table.cpp  Table.h  TimeInfo.cpp  TimeInfo.h  VuMeter.cpp  VuMeter.h
test/: TestAudioLibrary.cpp  TestConfig.cpp  TestFftRunner.cpp  TestGitWrapper.cpp  TestSamplePlayer.cpp  TestTextureManager.cpp  TestUnitConverter.cpp  test01.yaml  test02.yaml  test03.yaml  test04.yaml
